k8s-manifests/infisical/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infisical
  labels:
    name: infisical
    app.kubernetes.io/name: infisical
    app.kubernetes.io/part-of: zeroqwait
