k8s-manifests/infisical/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical-svc
  namespace: infisical
  labels:
    app: infisical
    app.kubernetes.io/name: infisical
spec:
  type: ClusterIP
  selector:
    app: infisical
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
