k8s-manifests/infisical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical-ingress
  namespace: infisical
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "infisical.192.168.2.134.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical-svc
                port:
                  number: 8080
    - host: "infisical.zeroqwait.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical-svc
                port:
                  number: 8080
